--- a/index.html
+++ b/index.html
@@ -162,9 +162,14 @@
             <div class="content-section">
               <div class="text-about">
                 <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero
-                  labore rerum, aspernatur, maiores possimus voluptate saepe
-                  blanditiis aperiam eaque sed veniam aliquid, dolor quas sint.
+                  Roti Kopi Maestro salah satu usaha Home industri yang
+                  mempunyai khas harum manis yang berlokasi di Jakarta dan Kota
+                  Malang. Roti maestro berdiri sekitar bulan Februari 2021 dan
+                  memiliki 8 orang karyawan yang terdiri dari 2 orang pembuat
+                  roti dan 2 orang sebagai sales atau sering disebut penjual di
+                  tiap Tokonya. Pendapatan atau omset yang diperoleh Roti Kopi
+                  Maestro Jakarta dan Malang digolongkan statis di angka
+                  perbulannya kurang lebih Rp. 15.000.000/Tokonya
                 </p>
               </div>
               <div class="img-about">
