--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="asset/logoM.png" type="image/x-icon" />
     <title>Roti Maestro</title>
+    <script
+      src="https://kit.fontawesome.com/04ab65d056.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -228,7 +232,29 @@
         </aside>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <div class="sosmed-footer">
+          <h2>Visit Our Social Media</h2>
+          <div class="icons">
+            <a
+              href="https://www.instagram.com/rotimaestro/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a
+              href="https://wa.me/6289678316883"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fab fa-whatsapp"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="script/script.js"></script>
   </body>
