fixing news title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="navbar">
           <div class="nav-logo">
             <a href="#content">
-              <img src="asset/logoRotiM.png" alt="logoRotiM" />
+              <img src="asset/logoM2.png" alt="logoRotiM" />
             </a>
           </div>
           <div class="nav-option nav-lg">
@@ -194,7 +194,8 @@
                   <div class="img-aside">
                     <img src="asset/mitra.jpeg" alt="" />
                   </div>
-                  <a href=""
+                  <a
+                    href="https://www.kompasiana.com/khansaislami8275/65486a21edff765e7f4471e2/grand-launching-premium-coffe-bun-roti-maestro-roti-m-menyasar-pasar-baru-dengan-inovasi-produk"
                     >Grand Launching Premium Coffe Bun Roti Maestro (Roti M):
                     Menyasar Pasar Baru dengan Inovasi Produk
                   </a>
@@ -203,9 +204,10 @@
                   <div class="img-aside">
                     <img src="asset/belajar.jpg" alt="" />
                   </div>
-                  <a href=""
-                    >Grand Launching Premium Coffe Bun Roti Maestro (Roti M):
-                    Menyasar Pasar Baru dengan Inovasi Produk
+                  <a
+                    href="https://www.kompasiana.com/khansaislami8275/652e92c3ee794a680e373222/mahasiswa-universitas-negeri-malang-bantu-mengangkat-bisnis-roti-maestro-roti-m"
+                    >Mahasiswa Universitas Negeri Malang Bantu Mengangkat Bisnis
+                    Roti Maestro (Roti M)
                   </a>
                 </li>
                 <li>
