fixing news title

--- a/index.html
+++ b/index.html
@@ -214,9 +214,10 @@
                   <div class="img-aside">
                     <img src="asset/3.jpg" alt="" />
                   </div>
-                  <a href=""
-                    >Grand Launching Premium Coffe Bun Roti Maestro (Roti M):
-                    Menyasar Pasar Baru dengan Inovasi Produk
+                  <a
+                    href="https://e-journal.nalanda.ac.id/index.php/jipm/article/view/601"
+                    >Strategi Pengembangan Produk Roti Mestro (Roti M) untuk
+                    Menyasar Pangsa Pasar Baru
                   </a>
                 </li>
                 <li>
@@ -224,8 +225,9 @@
                     <img src="asset/mitra.jpeg" alt="" />
                   </div>
                   <a href=""
-                    >Grand Launching Premium Coffe Bun Roti Maestro (Roti M):
-                    Menyasar Pasar Baru dengan Inovasi Produk
+                    >Angkat Tema "Kembangkan Bisnismu, Perluas Pasarmu",
+                    Mahasiswa Hukum UMM adakan sosialisasi Pendirian PT
+                    Perorangan pada UMK Roti Maestro
                   </a>
                 </li>
               </ul>
