fixing news title

--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
                   <div class="img-aside">
                     <img src="asset/mitra.jpeg" alt="" />
                   </div>
-                  <a href=""
+                  <a
+                    href="https://www.kompasiana.com/irvanir41/628f350df1f29850c50a8b82/angkat-tema-kembangkan-bisnismu-perluas-pasarmu-mahasiswa-hukum-umm-adakan-sosialisasi-pendirian-pt-perorangan-pada-umk-roti-maestro"
                     >Angkat Tema "Kembangkan Bisnismu, Perluas Pasarmu",
                     Mahasiswa Hukum UMM adakan sosialisasi Pendirian PT
                     Perorangan pada UMK Roti Maestro
