fixing navbar icon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="asset/logoM.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="asset/logoM2.png" type="image/x-icon" />
     <title>Roti Maestro</title>
     <script
       src="https://kit.fontawesome.com/04ab65d056.js"
@@ -17,7 +17,7 @@
         <div class="navbar">
           <div class="nav-logo">
             <a href="#content">
-              <img src="asset/logoM2.png" alt="logoRotiM" />
+              <img src="asset/logoRotiM.png" alt="logoRotiM" />
             </a>
           </div>
           <div class="nav-option nav-lg">
