--- a/index.html
+++ b/index.html
@@ -256,6 +256,20 @@
             >
               <i class="fab fa-whatsapp"></i>
             </a>
+            <a
+              href="https://wa.me/6289678316883"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fa-brands fa-square-youtube"></i>
+            </a>
+            <a
+              href="https://wa.me/6289678316883"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fa-brands fa-x-twitter"></i>
+            </a>
           </div>
         </div>
       </div>
