--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
                   <p>Paket Roti</p>
                 </div>
               </a>
+              <a href="#" class="card">
+                <div class="img-menu">
+                  <img src="asset/15.jpg" alt="" />
+                </div>
+                <div class="desc-menu">
+                  <p>Paket Roti</p>
+                </div>
+              </a>
             </div>
             <div class="view-section">
               <a href="" class="view-button"><p>Menu Lainnya</p> </a>
