--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@
                   <p>Malang</p>
                 </div>
               </a>
+              <a href="#" class="card">
+                <div class="img-menu">
+                  <img src="asset/belajar.jpg" alt="" />
+                </div>
+                <div class="desc-menu">
+                  <p>Online</p>
+                </div>
+              </a>
             </div>
           </article>
 
